src/objects/Mobile_Incident_Report_Form__c.object
<CustomObject>
    <description>Used to support event and incident reporting.</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Drug/Alcohol Offenses</fullName>
                </value>
                <value>
                    <fullName>Crimes Against Persons</fullName>
                </value>
                <value>
                    <fullName>Crimes Against Property</fullName>
                </value>
                <value>
                    <fullName>Security Threats</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <label>Incident Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Location__c</fullName>
        <label>Incident Location Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Incident_Score__c</fullName>
        <label>Incident Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>People_Involved__c</fullName>
        <label>People Involved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Use of Drugs/Alcohol</fullName>
                </value>
                <value>
                    <fullName>Possession of Drugs</fullName>
                </value>
                <value>
                    <fullName>&quot;Other&quot; Drug/Alcohol Offenses</fullName>
                </value>
                <value>
                    <fullName>Battery</fullName>
                </value>
                <value>
                    <fullName>Assault with a Deadly Weapon</fullName>
                </value>
                <value>
                    <fullName>Homicide</fullName>
                </value>
                <value>
                    <fullName>Personal Property Theft</fullName>
                </value>
                <value>
                    <fullName>Vandalism</fullName>
                </value>
                <value>
                    <fullName>Arson</fullName>
                </value>
                <value>
                    <fullName>Bomb Threat</fullName>
                </value>
                <value>
                    <fullName>Force protection issues</fullName>
                </value>
                <value>
                    <fullName>Threats of Extreme Violence</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Mobile Incident Report</label>
    <nameField>
        <label>Mobile Incidence Reporting Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Incident Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>